# logging-demo

./: logging-demo.service  pyproject.toml
logging_demo/: main.py
